<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GeekAdvisor</string>
    <string name="title_activity_cours">Cours</string>
    <string name="title_activity_main">Cours</string>
    <string name="title_activity_video">Video</string>
    <string name="title_activity_tutoriaux">Tuto</string>
    <string name="title_activity_livres">Livres</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_inscrire">InscrireActivity</string>
    <string name="title_activity_description_ue">DescriptionUEActivity</string>
    <string name="title_section1">Cours</string>
    <string name="title_section2">Video</string>
    <string name="title_section3">Livres</string>
    <string name="title_section4">Tutoriaux</string>
    <string name="popup_modifier">Modifier</string>
    <string name="popup_supprimer">Supprimer</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="search_title">Search</string>
    <string name="search_hint">Chercher une UE</string>
    <string name="action_overflow">Overflow</string>
    <string name="dummy_section_text">Section %1d is just a dummy section.</string>
    <string name="demo_xml">XML</string>
    <string name="demo_java">Java</string>
    <string name="title_activity_list_ue">ListUEActivity</string>
    <string name="title_activity_rating">Partagez votre avis</string>
    <string name="title_activity_connexion">Connexion</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_register"><b>Se Connecter</b></string>
    <string name="action_sign_in_short">Sign in</string>

    <color name="BurlyWood">#FFF8DC</color>

    <string name="title_activity_adapter_list_livres">AdapterListLivresActivity</string>

</resources>
